# pygpmfparser

./: .gitignore  README-zh.md  README.md  build.py  pyproject.toml
pygpmfparser/: __init__.py  gopro_telemetry_extractor.py  gpmf_bindings.cpp  gpmf_sample.py
pygpmfparser/tests/: test_gpmf_parser.py
tests/: test_gpmf_parser.py
