[tool.poetry]
name = "pygpmfparser"
version = "0.0.1"
description = "Python bindings for GoPro GPMF-parser to extract telemetry data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/pygpmfparser"
packages = [{include = "pygpmfparser"}]

[tool.poetry.dependencies]
python = ">=3.8"
pybind11 = ">=2.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0", "pybind11>=2.6"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.scripts]
pygpmfparser = "pygpmfparser.__main__:main"